# simplecc-wasm

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Makefile  README.md  index.html  package-lock.json  package.json
.devcontainer/: Dockerfile
.github/workflows/: demo.yaml  npm-publish.yaml  test.yaml
demo/web/: package-lock.json  package.json
demo/web/src/: App.css  App.tsx  demo.tsx  index.tsx
pkg/nodejs/: simplecc_wasm.d.ts  simplecc_wasm.js  simplecc_wasm_bg.wasm
pkg/web/: simplecc_wasm.d.ts  simplecc_wasm.js  simplecc_wasm_bg.wasm  simplecc_wasm_bg.wasm.d.ts
src/: dicts.rs  lib.rs
static/css/: 207.a1aeff41.css  index.b91d4d0d.css
static/js/: 207.5acbfeea.js  207.5acbfeea.js.LICENSE.txt  index.34f2382d.js  index.45289897.js  index.65d342e2.js  index.d0bd8e44.js  index.e1b3148e.js  lib-react.2d0dfe34.js
static/wasm/: 0740b0ec465920e8.module.wasm  7f05a8bc0c37affe.module.wasm  7f2a936b3673b226.module.wasm  fb6892e5d3327507.module.wasm
test/: basic.test.js
