[package]
name = "simplecc-wasm"
version = "0.1.2"
authors = ["fengkx <liangkx8237@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Simple OpenCC alternative with wasm"
license = "MIT"
repository = "https://github.com/fengkx/simplecc-wasm"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = "debuginfo"


include = [
    "**/*.rs",
    "Cargo.toml",
    "OpenCC/data/dictionary/*.txt",
    "OpenCC/test/testcases/*",
]

[dependencies]
wasm-bindgen = "0.2"
simplecc = { version = "0.2.2", features = ["builtin_dicts"] }
